--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap 5 Simple Admin Dashboard</title>
+</head>
 <body>
   <script src="./index.js"></script>
 </body>
