--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Bootstrap 5 Simple Admin Dashboard</title>
 </head>
 <body>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-2">
+        menu
+      </nav>
+      <main class="col">
+        main
+      </main>
+    </div>
+  </div>
+
   <script src="./index.js"></script>
 </body>
 </html>
