--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-2">
-        menu
+      <nav class="col-2 bg-dark gx-0">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
       </nav>
       <main class="col">
         main
