--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-2 bg-dark gx-0">
+      <nav class="col-2 bg-dark gx-0 min-vh-100">
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Active</a>
