feat: introduce fontawesome

--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
       <nav class="col-2 bg-dark gx-0 min-vh-100">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
+            <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home fa-fw"></i> ダッシュボード</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#"><i class="fas fa-file-alt fa-fw"></i> 注文</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#"><i class="fas fa-shopping-cart fa-fw"></i> 商品</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="#"><i class="fas fa-user-friends fa-fw"></i> お客様</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-chart-bar fa-fw"></i> レポート</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-layer-group fa-fw"></i> インテグレーション</a>
           </li>
         </ul>
       </nav>
