feat: introduct collapse

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
             <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home fa-fw"></i> ダッシュボード</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-file-alt fa-fw"></i> 注文</a>
+            <a class="nav-link" data-toggle="collapse" href="#submenu1" aria-expanded="false" aria-controls="submenu1"><i class="fas fa-file-alt fa-fw"></i> 注文</a>
+            <div class="collapse" id="submenu1">
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link pl-5" href="#">ダッシュボード</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="fas fa-shopping-cart fa-fw"></i> 商品</a>
