--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-2 bg-dark gx-0 min-vh-100">
+      <nav class="col-2 bg-dark gx-0 min-vh-100 text-light">
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home fa-fw"></i> ダッシュボード</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#submenu1" aria-expanded="false" aria-controls="submenu1"><i class="fas fa-file-alt fa-fw"></i> 注文</a>
+            <a class="nav-link" data-toggle="collapse" href="#submenu1" aria-expanded="false" aria-controls="submenu1">
+              <i class="fas fa-file-alt fa-fw"></i> 注文
+              <span class="float-right">
+                <i class="fas fa-chevron-left"></i>
+              </span>
+            </a>
             <div class="collapse" id="submenu1">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link pl-5" href="#">ダッシュボード</a>
+                  <a class="nav-link pl-5" href="#">テスト1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link pl-5" href="#">テスト2</a>
                 </li>
               </ul>
             </div>
