--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <div class="container-fluid">
     <div class="row">
       <nav class="col-2 bg-dark gx-0 min-vh-100 text-light">
+        <header class="p-3 text-center">
+          <a href="#" class="text-decoration-none text-light fs-4">管理画面</a>
+        </header>
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home fa-fw"></i> ダッシュボード</a>
