--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
       <main class="col gx-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
+            <span class="navbar-text">
+              <a href="#" id="sidebar-toggle">
+                <i class="fas fa-bars"></i>
+              </a>
+            </span>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
