--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap 5 Simple Admin Dashboard</title>
+  <title>Bootstrap 5 Admin Template</title>
 </head>
 <body>
   <div class="container-fluid">
