--- a/src/login.html
+++ b/src/login.html
@@ -7,7 +7,14 @@
 </head>
 <body>
   <div class="container-fluid">
-    Login
+    <div class="row vh-100 justify-content-center align-items-center">
+      <div class="col-4">
+        login1
+      </div>
+      <div class="col-4">
+        login2
+      </div>
+    </div>
   </div>
 
   <script src="./index.js"></script>
