--- a/src/login.html
+++ b/src/login.html
@@ -7,12 +7,31 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="row vh-100 justify-content-center align-items-center">
-      <div class="col-4">
-        login1
-      </div>
-      <div class="col-4">
-        login2
+    <div class="d-flex vh-100">
+      <div class="container m-auto">
+        <div class="row justify-content-center">
+          <div class="col-4 text-center">
+            <h2 class="fs-3 mb-4">パスワードでログイン</h2>
+            <div class="d-grid gap-2">
+              <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email address</label>
+              </div>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+              </div>
+  
+              <input type="submit" value="ログイン" class="btn btn-primary">
+            </div>
+          </div>
+          <div class="col-4 text-center">
+            <h2 class="fs-3 mb-4">アカウントでログイン</h2>
+            <div class="d-grid gap-2">
+              <a href="#" class="btn btn-primary">Login by Google</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
