--- a/src/login.html
+++ b/src/login.html
@@ -6,7 +6,7 @@
   <title>Bootstrap 5 Admin Template</title>
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid bg-light">
     <div class="d-flex vh-100">
       <div class="container m-auto">
         <div class="row justify-content-center">
